[package]
name = "study-20230218-rust-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
json = "0.12.4"
serde_json = "1.0"
elasticsearch = "7.17.7-alpha.1"
warp = "0.3.3"
rocket = "0.4.11"
once_cell = "1.17.1"
rand = "0.8.5"

[dependencies.rocket_contrib]
version = "0.4.11"
features = ["json"]